Set up profile update endpoint and update api spec
