# backend/app/controllers/profiles_controller.rb
@@ -1,14 +1,16 @@
 class ProfilesController < ApplicationController
+  before_action :set_user, only: [:show, :update]
+
+
   def show
-    @user = User.includes(:employments, employments: [:position, position: :company]).find(current_user.id)
     if @user.blank?
       render json: { error: 'User not found' }, status: :not_found
     end
   end
 
   def update
-    if current_user.update(profile_params)
-      render json: { message: 'Profile updated successfully' }, status: :ok
+    if @user.update(profile_params)
+      render :show, status: :ok
     else
       render json: { error: @user.errors.full_messages }, status: :unprocessable_entity
     end
@@ -17,6 +19,10 @@ class ProfilesController < ApplicationController
   private
 
   def profile_params
-    params.expect(user: %i[first_name last_name email username])
+    params.expect(profile: %i[first_name last_name email username])
+  end
+
+  def set_user
+    @user = User.includes(:employments, employments: [:position, position: :company]).find(current_user.id)
   end
 end
